# webds

./: CMakeLists.txt  Makefile  README  sc.mk  webds
html/: desktop.css  desktop.html  desktop.js  launcher.css  launcher.html  launcher.js  webds.html  webds.js
include/: plugin.h  util.hpp  webds_launcher.hpp  webds_webkit.hpp
lib/: CMakeLists.txt  util.cpp
main/: CMakeLists.txt  main.cpp  webds_desktop.cpp  webds_desktop.hpp  webds_launcher.cpp  webds_webkit.cpp  webds_webkit.hpp
plugins/: CMakeLists.txt
plugins/plugin-cmd/: CMakeLists.txt  main.cpp
plugins/plugin-dirlist/: CMakeLists.txt  main.cpp
plugins/plugin-messager/: CMakeLists.txt  main.cpp
