cmake_minimum_required(VERSION 2.8)

PROJECT (webDS)

SET(CMAKE_COLOR_MAKEFILE ON)
# SET(CMAKE_VERBOSE_MAKEFILE ON)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)
PKG_CHECK_MODULES(WEBKITGTK3 REQUIRED webkitgtk-3.0)

INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${WEBKITGTK3_INCLUDE_DIRS})

ADD_SUBDIRECTORY(main)
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(plugins)
